complete mobile design

--- a/Set/index.html
+++ b/Set/index.html
@@ -18,17 +18,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-        .attribution {
-            font-size: 11px;
-            text-align: center;
-        }
+    <script src="https://kit.fontawesome.com/a27eb544df.js" crossorigin="anonymous"></script>
 
-        .attribution a {
-            color: hsl(228, 45%, 44%);
-        }
-    </style>
 </head>
 
 <body>
@@ -56,26 +47,171 @@
             <p class="intro-para-mob">Fylo stores all your most important files in one secure location. Access them
                 wherever you need, share
                 and collabarate with friends and family, and co-workers</p>
+            <button class="submit-btn">Get Started</button>
+        </div>
+    </section>
+
+    <section class="skill-container">
+        <div class="skill1 skill">
+            <img src="images/icon-access-anywhere.svg" alt="access anywhere">
+            <h3>Acces your files, anywhere</h3>
+            <p>The ability to use your mobile, tablet or pc anywhere means your files follow you everywhere.</p>
+
+
+        </div>
+        <div class="skill2 skill">
+            <img src="images/icon-security.svg" alt="access anywhere">
+            <h3>Security you can trust</h3>
+            <p>2-factor authentication and user controlled encr
+                yption are just a couple of the security features we allow to help secure your files. </p>
+        </div>
+        <div class="skill3 skill"> <img src="images/icon-collaboration.svg" alt="access anywhere">
+            <h3>Real time collabration</h3>
+            <p>Security shares files and folders wuth friends family and colleagues for live collabration. No email
+                attachments required.</p>
+
+        </div>
+        <div class="skill4 skill"> <img src="images/icon-any-file.svg" alt="access anywhere">
+            <h3>Store any type of file</h3>
+            <P>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file
+                types to be security stored and shared.</P>
+        </div>
+
+
+    </section>
+    <section class="description">
+        <img src="images/illustration-stay-productive.png" alt="stay-productive" class="productive-img">
+
+        <div class="description-data">
+
+            <h3>Stay Productive, Wherever you are</h3>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente ipsa quisquam ut sint odio
+                consequatur a quia, unde molestias aspernatur doloribus culpa cumque nobis dicta, incidunt,
+                reprehenderit harum perspiciatis.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente ipsa quisquam ut sint odio
+                consequatur a quia, unde molestias aspernatur doloribus culpa cumque nobis dicta, incidunt,
+                reprehenderit harum perspiciatis.</p>
+
+            <p class="cta1">See how fylo works <img src="images/icon-arrow.svg" alt=""></p>
+            <div class="line"></div>
+        </div>
+    </section>
+
+    <section class="testimonials">
+
+        <div class="reviews1 reviews">
+            <div class="reviews-container">
+                <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team
+                    has
+                    become a well-oiled collaboration machine</p>
+                <div class="identity">
+                    <img src="images/profile-1.jpg" alt="profile1">
+                    <div>
+                        <h3>Satish Patel</h3>
+                        <span>Founder and CEO, Huddle</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="reviews2 reviews">
+            <div class="reviews-container">
+                <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team
+                    has
+                    become a well-oiled collaboration machine</p>
+                <div class="identity">
+                    <img src="images/profile-2.jpg" alt="profile2">
+                    <div>
+                        <h3>Bruce McKenzie</h3>
+                        <span>Founder and CEO, Huddle</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="reviews3 reviews">
+            <div class="reviews-container">
+                <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team
+                    has
+                    become a well-oiled collaboration machine</p>
+                <div class="identity">
+                    <img src="images/profile-3.jpg" alt="profile3">
+                    <div>
+                        <h3>Iva Boyd</h3>
+                        <span>Founder and CEO, Huddle</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <section class="footer-container">
+
+
+        <div class="mail-container">
+            <h3>Get early access today </h3>
+            <p>it only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+                questions, our support team would be happy to help you.</p>
+            <input type="text" placeholder="email@example.com">
+            <button>Get started for free</button>
         </div>
 
 
 
 
+        <div class="footer-links-container">
+            <img src=" images/logo.svg" alt="footer-logo" class="footer-logo">
+
+            <div class="location footer-links"><img src="images/icon-location.svg" alt="location">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Vitae molestias commodi, nobis maiores sit at? Veniam inventore unde quidem dolor eius fuga
+                    ullamquod quis. </p>
+            </div>
 
 
+            <div class="call footer-links"><img src="images/icon-phone.svg" alt="location">
+                <p>+1-543-123-4567 </p>
+            </div>
 
 
+            <div class="mail footer-links"><img src="images/icon-email.svg" alt="location">
+                <p>example@fylo.com</p>
+            </div>
 
 
+        </div>
+
+
+        <ul class="footer-cta-parent">
+            <li class="footer-cta1 footer-cta">About</li>
+            <li class="footer-cta3 footer-cta">Jobs</li>
+            <li class="footer-cta4 footer-cta">Press</li>
+            <li class="footer-cta2 footer-cta">Blogs</li>
+        </ul>
+        <ul class="footer-cta-parent">
+            <li class="footer-cta1 footer-cta">Contact us</li>
+            <li class="footer-cta3 footer-cta">Terms</li>
+            <li class="footer-cta4 footer-cta">Privacy</li>
+        </ul>
+
+        <div class="footer-icon-container">
+            <i class="fa-brands fa-instagram fa-3xl" style="color: #ffffff;"></i>
+            <i class="fa-brands fa-twitter fa-3xl" style="color: #ffffff;"></i>
+            <i class="fa-brands fa-facebook fa-3xl" style="color: #ffffff;"></i>
+        </div>
 
     </section>
-    <!-- 
-    <footer>        
+
+    <footer>
         <p class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="#">Your Name Here</a>.
+            Coded by <a href="#"> Mehtaab</a>.
         </p>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
